# CIS-1904

week00/homework/: Exercises.hs  instructions.md
week01/class/: Exercises.hs
week01/homework/: Exercises.hs  instructions.md
week02/class/: Exercises.hs
week02/homework/: Exercises.hs  instructions.md
week03/class/: Exercises.hs
week03/homework/: Exercises.hs  instructions.md
week04/class/: Exercises.hs
week04/homework/: Exercises.hs  instructions.md
week05/class/: Exercises.hs
week06/class/: Exercises.hs
week06/week06/class/: Exercises.hs
week07/class/: Exercises.hs
week07/homework/: Exercises.hs  hints.md  instructions.md
week08/: 08.md
week08/class/: Exercises.hs
week08/homework/: Exercises.hs  instructions.md
week09/class/: Exercises.hs
week09/homework/: Exercises.hs  instructions.md
week10/: 10.md
week10/class/: Exercises.hs
week10/homework/: Exercises.hs  hw.cabal  instructions.md
week11/class/: Exercises.hs
week11/homework/: Exercises.hs  instructions.md
week12/class/: Expr.hs  HetA.hs  HetB.hs  TempA.hs  TempB.hs  Vec.hs
week12/homework/: instructions.md  package.yaml  stack.yaml
week12/homework/src/: Lib.hs  MyModule.hs
week12/homework/test/: Spec.hs
week12/temp/temp2/: instructions.md  myproject.cabal
week12/temp/temp2/src/: Lib.hs  MyModule.hs
week12/temp/temp2/test/: Spec.hs
week13/class/: Concurrent.hs  Parsing.hs  class.cabal
week13/class-diagrams/: Examples.hs  Kaleidoscope.hs  Triangle.hs  class.cabal
